# movie-project

./: .gitignore  ObrezkaSsilokPEOPLE.py  README.md  config.py  example.env  main.py  pyproject.toml
app/: __init__.py  config.py  utils.py
app/api/: __init__.py  filter.py  utils.py
app/api/resources/: country.py  film.py  genre.py  person.py
app/main/: __init__.py  routes.py
app/models/: __init__.py  models.py
app/schemas/: __init__.py  model_schemas.py
frontend/js/: info.js
frontend/static/js/: info.js  main.js  search.js
frontend/static/styles/: main.css  search.css
frontend/styles/: info.css  search.css
frontend/templates/: info.html  main.html  search.html
scripts/: ObrezkaSsilok.py  ObrezkaSsilokTRAILERS.py  SearchDuplicates.py  main.py
